<resources>
    <string name="app_name">toDoList</string>
    <string name="status">mark as Complete</string>
    <string name="time">Yesterday</string>
    <string name="actitity">Activity</string>
    <string name="description">this Space enables Us to give a \ndetail on the actitivies that are done everyday</string>
    <string name="capture">Capture Image</string>
    <string name="date">Update and Time</string>
    <string name="im">image Description</string>
    <string name="a">Add or Capture image</string>
    <string name="i">Activity Name\n</string>
    <string name="i1">Activity Name</string>
    <string name="chara">Activity Description</string>
    <string name="nameac">Enter the activity Name</string>
    <string name="da">Enter the Description</string>
</resources>