<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GalleryActivity">
    <!-- setting the image where our image will be displayed-->


        <ImageView
            android:id="@+id/capture_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capture_button"
            app:layout_marginBaseline="10dp"
            app:srcCompat="@drawable/baseline_photo_size_select_actual_24" />

        <TextView
            android:id="@+id/capture_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/a"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="65dp" />

        <TextView
            android:id="@+id/activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="@string/i"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/capture_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/nameac"
            app:layout_constraintTop_toBottomOf="@+id/activity_name"
            app:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/activity_name_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Activity Description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/activity_name_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_name_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/da"
            app:layout_constraintTop_toBottomOf="@+id/activity_name_description" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/calender_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/da"
            app:layout_constraintTop_toBottomOf="@+id/calender" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="Add Time"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/calender_text"
            app:layout_marginBaseline="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/da"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_marginBaseline="10dp" />

        <TextView
            android:id="@+id/calender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="Add Date"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/activity_name_description_text" />
        <ImageView
            android:id="@+id/galleryImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/capture_image"
            app:layout_constraintTop_toBottomOf="@+id/capture_button"
            app:layout_marginBaseline="10dp"
            app:srcCompat="@drawable/baseline_add_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>